# datagovmy-python-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  example.py  main.py  pyproject.toml
.claude/agent-memory/sdk-dx-reviewer/: MEMORY.md  sdk_patterns.md
.claude/agent-memory/security-code-reviewer/: MEMORY.md  project_architecture.md  security_patterns.md
.claude/agents/: sdk-dx-reviewer.md
.github/workflows/: ci.yml  release.yml
datagovmy/: __init__.py  datagovmy.py  exceptions.py
datagovmy/constants/: __init__.py  prasarana.py
datagovmy/core/: api.py
datagovmy/service/: __init__.py  data_catalogue.py  data_endpoint.py  environment.py  exceptions.py  open_dosm.py
docs/: errors.md  usage.md
mydata/core/: api.py
tests/: test_datagovmy.py
tests/core/: test_api.py
tests/service/: test_data_catalogue.py  test_exceptions.py  test_open_dosm.py
