[project]
name = "datagovmy-python-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests"]

[dependency-groups]
dev = [
  'pytest',
  'pytest-sugar',
  'pyrefly',
  'requests-mock',
  'ruff',
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["datagovmy", "tests"]

[tool.pyrefly]
project_includes = ["datagovmy", "tests"]
python_interpreter = ".venv/bin/python"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]