[project]
name = "datagovmy-python-sdk"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests"]

[dependency-groups]
dev = [
  'build',
  'pytest',
  'pytest-sugar',
  'pyrefly',
  'requests-mock',
  'ruff',
]

[tool.hatch.build.targets.wheel]
packages = ["datagovmy"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["datagovmy", "tests"]

[tool.pyrefly]
project_includes = ["datagovmy", "tests"]
python_interpreter = ".venv/bin/python"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -------------------------------------------------------
# Semantic Release configuration
# -------------------------------------------------------

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
build_command = "pip install build && python -m build"
major_on_zero = false
tag_format = "v{version}"

# The commit message for the version bump — [skip ci] prevents
# the release workflow from re-triggering on its own commit
commit_message = "chore(release): v{version} [skip ci]"


[tool.semantic_release.changelog]
enabled = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false